Sticker Picker: Fix broken layout (#3638)

--- a/src/components/common/StickerSetModal.scss
+++ b/src/components/common/StickerSetModal.scss
@@ -1,4 +1,6 @@
 .StickerSetModal {
+  --emoji-size: 4.5rem;
+
   &.custom-emoji {
     --emoji-size: 2.25rem;
 
